# study-rust-flutter

greeter/: README.md  pubspec.yaml
greeter/android/app/: build.gradle
greeter/ios/Runner/: Info.plist
greeter/ios/Runner.xcodeproj/: project.pbxproj
greeter/lib/: main.dart
greeter/linux/: CMakeLists.txt
greeter/macos/Runner.xcodeproj/: project.pbxproj
greeter/test/: widget_test.dart
greeter/web/: index.html
greeter/windows/: CMakeLists.txt
greeter/windows/runner/: Runner.rc  main.cpp
libs/: Cargo.toml
libs/bindings/: Cargo.toml  Makefile  build.rs  uniffi.toml
libs/bindings/bindings-android/: .gitignore  gradle.properties
libs/bindings/bindings-android/lib/: build.gradle.kts  proguard-rules.pro
libs/bindings/bindings-swift/: .gitignore  Package.swift
libs/bindings/bindings-swift/studyFFI.xcframework/: Info.plist
libs/bindings/bindings-swift/studyFFI.xcframework/ios-arm64_x86_64-simulator/studyFFI.framework/Headers/: studyFFI-umbrella.h
libs/bindings/bindings-swift/studyFFI.xcframework/macos-arm64_x86_64/studyFFI.framework/Modules/: module.modulemap
libs/bindings/src/: study.udl  uniffi_binding.rs
libs/core/: .gitignore  Cargo.toml  Makefile  build.rs
libs/core/src/: binding.rs  core.rs  lib.rs
libs/core/src/grpc/: mod.rs
libs/core/src/grpc/proto/: study.proto
libs/flutter/: .gitignore  Makefile  pubspec.yaml
libs/flutter/android/: .gitignore  build.gradle  settings.gradle
libs/flutter/ios/: .gitignore  study.podspec
libs/flutter/lib/: native_toolkit.dart  study.dart
rust/: Makefile
rust/src/: binding.rs  lib.rs
(+9 files in other folders)
