[package]
name = "study_bindings"
edition = "2021"
version.workspace = true

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
name = "study_bindings"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
study_core = { path = "../core" }
anyhow = { version = "1.0.79", features = ["backtrace"] }
uniffi = { version = "0.23.0", features = ["bindgen-tests", "cli"] }
uniffi_bindgen = "0.23.0"
uniffi_macros = "0.23.0"
flutter_rust_bridge = "1.82.6"
once_cell = "1.19.0"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.8", features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }

[build-dependencies]
uniffi_build = { version = "0.23.0" }
uniffi_bindgen = "0.23.0"
anyhow = { version = "1.0.79", features = ["backtrace"] }
